feat: impl list cars api
