# api/docs/swagger.json
@@ -186,10 +186,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/model.Car"
-                                            }
+                                            "$ref": "#/definitions/cmd_restful_rental_api_v1_cars.listCarsResp"
                                         }
                                     }
                                 }
@@ -213,6 +210,20 @@
         }
     },
     "definitions": {
+        "cmd_restful_rental_api_v1_cars.listCarsResp": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Car"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "er.Error": {
             "type": "object",
             "properties": {
@@ -222,6 +233,20 @@
                 "data": {},
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_blackhorseya_irent_cmd_restful_rental_api_v1_cars.listCarsResp": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Car"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
